<resources>
    <string name="app_name">Burger App</string>
    <string name="titulo">REGISTRO DE CUENTA</string>
    <string name="nombre">Nombres:</string>
    <string name="apellido">Apellidos:</string>
    <string name="cedula">Cédula:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="direccion">Dirección:</string>
    <string name="correo">Correo electrónico:</string>
    <string name="contrasena">Contraseña: Mínimo 6 dígtos</string>
    <string name="contrasenax2">Repetir Contraseña:</string>
    <string name="celular">Teléfono movil:</string>
    <string name="guardar">Registrar</string>
    <string name="burguer_app">Burger App</string>
    <string name="todo">TODO</string>
    <string name="hint_contrasena">Mínimo 6 dígitos</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="contrasena_olvidada">Olvidé mi contraseña</string>
    <string name="ingrese_correo">Ingrese su correo electrónico</string>
    <string name="enviar_correo">ENVIAR</string>
    <string name="no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="crear_cuenta">"Crear cuenta "</string>
    <string name="contrasena_login">Contraseña:</string>
    <string name="titulo_main">Correo electrónico registrado</string>
    <string name="menu_cerrar_sesion">Cerrar Sesión</string>
    <string name="menu_mi_cuenta">Mi Cuenta</string>
    <string name="menu_whatsapp">Linea de ayuda WhatsApp</string>

    <string-array name="ciudades">
        <item>Ciudad</item>
        <item>Rionegro</item>
        <item>Marinilla</item>
        <item>La Ceja</item>
        <item>El Santuario</item>
        <item>El Carmen</item>
    </string-array>

    <string name="title_activity_botttom_navigation">MainActivity</string>
    <string name="title_home">HOME</string>
    <string name="title_menu">MENÚ</string>
    <string name="title_tracking">TRACKING</string>
    <string name="title_carrito">CARRITO</string>
    <string name="titulo_home">Bienvenido a Burger App</string>

    <string name="label_hamburguesas">HAMBURGUESAS</string>
    <string name="label_perros">PERROS</string>
    <string name="label_complementos">COMPLEMENTOS</string>
    <string name="label_bebidas">BEBIDAS</string>
    <string name="label_detalles">DETALLES</string>
    <string name="label_pedido">COMPRA EXITOSA</string>
    <string name="label_direccion">DIRECCIÓN</string>
    <string name="label_mi_cuenta">MI CUENTA</string>
    <string name="label_editar">EDITAR CUENTA</string>
    <string name="label_login">INICIAR SESIÓN</string>
    <string name="label_crear_cuenta">CREAR CUENTA</string>
    <string name="label_restablecer_password">RECUPERAR PASSWORD</string>
    <string name="label_final">COMPRA EXITOSA</string>

    <string name="info_home">Este es el fragmento encargado de darle la bienvenida al usuario, en este el usuario se puede dirigir a menu o a tracking</string>
    <string name="info_tracking">Se realizara el tracking de los pedidos utilizando un codigo de seguimiento</string>
    <string name="info_menu">El usuario puede ver los diferentes submenus disponibles y acceder a ellos</string>
    <string name="info_carrito">El usuario puede ver los productos que han sido añadidos al carrito asi como una cantidad modificable del producto, la opción de quitar el producto y el subtotal</string>
    <string name="info_burger">Se puede ver el menú hamburguesas, una breve descripción, sus precios y el botón añadir al carrito</string>
    <string name="info_perros">Se puede ver el menú perros, una breve descripción, sus precios y el botón añadir al carrito</string>
    <string name="info_complementos">Se puede ver el menú complementos, una breve descripción, sus precios y el botón añadir al carrito</string>
    <string name="info_bebidas">Se puede ver el menú bebidas, una breve descripción, sus precios y el botón añadir al carrito</string>
    <string name="info_detalles">Se pueden ver los detalles de la compra, metodo de servicio, ubicación de la tienda y del cliente, metodo de pago y total a pagar</string>
    <string name="info_pedido_realizdo">se ven los productos comprados con sus precios y un codigo de seguimiento del pedido</string>
    <string name="info_direccion">el usuario debe introducir la nueva dirección de entrega, el nombre de la persona que recibe y el telefono de esta</string>
    <string name="info_mi_cuenta">El usuario puede ver sus datos</string>
    <string name="info_editar">El usuario puede editar sus datos</string>

    <string name="continuar">CONTINUAR</string>
    <string name="cambiar_direccion">CAMBIAR DIRECCIÓN</string>

    <string name="mexicana">PAPAS A LA FRANCESA</string>
    <string name="descripcion_mexicana">125 gramos de carne de res, queso americano, guacamole, fríjol refrito, verduras y mayonesa.</string>
    <string name="precio_mexicana">$16000</string>
    <string name="bt_anadir">Añadir al carrito</string>
    <string name="info">info de firebase</string>
    <string name="bt_guardar_cambios">GUARDAR CAMBIOS</string>
    <string name="nueva_contrasena">Nueva contraseña:</string>
    <string name="hint_nueva_contrasena">Ingrese solo si desea cambiarla</string>
    <string name="ingrese_contrasena">Ingrese su contraseña actual para guardar cambios</string>

    <string name="menu_hamburguesas">Hamburguesas</string>
    <string name="menu_perros">Perros</string>
    <string name="menu_complementos">Complementos</string>
    <string name="menu_bebidas">Bebidas</string>
    <string name="cantidad">Cantidad</string>
    <string name="numero">15</string>
    <string name="carrito_vacio">Tu carrito de compras está vacío</string>
    <string name="info_pago">Información de Pago</string>
    <string name="subtotal">Subtotal:</string>
    <string name="domicilio">Domicilio:</string>
    <string name="total">Total:</string>
    <string name="metodo">Método de Servicio</string>
    <string name="domi">Entrega a Domicilio</string>
    <string name="tienda">Recoger en Tienda</string>
    <string name="mi_ubicacion">Mi Ubicación</string>
    <string name="mi_tienda">Mi Tienda</string>
    <string name="dir_tienda">Calle 41 # 67 37</string>
    <string name="ciudad_tienda">Rionegro, Antioquia</string>
    <string name="metodo_pago">Método de Pago</string>
    <string name="efectivo">Efectivo</string>
    <string name="finalizar">FINALIZAR PEDIDO</string>
    <string name="precio_cero">0</string>
    <string name="peso">$</string>

    <string name="mensaje_final">Tu pedido ha sido realizado exitosamente</string>
    <string name="mensaje_domicilio">Llegara a tu domicilio en 30 minutos</string>
    <string name="mensaje_recoger">Estará listo para ser recogido en 30 minutos</string>
    <string name="continuar_comprando">Continua Comprando</string>

</resources>