<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="null"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="null"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="null"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/cedula"
            android:inputType="number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="null"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/celular"
            android:inputType="number"
            android:textSize="16sp"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="392dp" />

        <Spinner
            android:id="@+id/sp_ciudad"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:entries="@array/ciudades" />

        <EditText
            android:id="@+id/et_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="null"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/direccion"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="null"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="392dp" />

        <EditText
            android:id="@+id/et_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="null"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:textSize="16sp"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="392dp" />

        <EditText
            android:id="@+id/et_contrasenax2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="null"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/contrasenax2"
            android:inputType="textPassword"
            android:textSize="16sp"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="392dp" />

        <Button
            android:id="@+id/bt_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F56C57"
            android:fontFamily="sans-serif-black"
            android:text="@string/guardar"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>