<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".ui.carrito.DetallesFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_detalles"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bt_cambiar_dir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F56C57"
        android:text="@string/cambiar_direccion" />

    <Button
        android:id="@+id/bt_finalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F56C57"
        android:text="@string/finalizar" />
</LinearLayout>